assets/css/style.css
/*Asterisk wildcard selectorto override default styles added by browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/*General Styles */

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: #94547E;

}

h1,
h2,
h3 {
    font-family: 'Pontano Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #252525;
}

header {
    background-color: #94547E;
    font-family: 'Pontano Sans', sans-serif;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;

}

header a {
    text-decoration: none;
    color: inherit;
}

main {

    flex: 1 0 auto;
    font-family: 'Montserrat', sans-serif;
    margin-top: 41px;
    display: flex;
    flex-direction: column;
}

/*Hero Section*/

#hero {
    height: 850px;
    width: 100%;
    background: url("../images/crystals-sitting-woman.webp") no-repeat center center/cover;
}

#cover-text {
    background-color: rgba(148, 84, 126, .7);
    font-size: 130%;
    position: absolute;
    bottom: 25px;
    width: 70%;
    min-height: 200px;
    padding-top: 50px;
    margin-left: 10px;
}

/*gallery page*/

#photos img {
    width: 100%;
    line-height: 1rem;
}

#photos {
    line-height: 0;
}

#video {
    text-align: center;
}

/* Sign up page */
#sign-up {
    background-image: url("../images/pink-crystal-white-table.webp");
    background-size: cover;
    background-position: 75%;
    background-repeat: no-repeat;
    padding: 20px 10% 0 10%;
    flex-grow: 1;
    text-align: center;
}

#signup-form {
    color: #ffffff;
    background-color: rgba(245, 142, 161, 0.75);
    padding: 30px;
}

#signup-form>h2 {
    color: #ffffff;
    margin-bottom: 20px;

}

.text-input {
    background: transparent;
    color: #3a3a3a;
    width: 50%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #ffffff;
    border-radius: 2px;
    padding: 0 5px;
}

.join-button {
    background-color: #F58EA1;
    border-radius: 4px;
    font-size: x-large;
    padding: 10px;
    color: #ffffff;
    border: 2px solid #ffffff;
    cursor: pointer;
    margin-bottom: 10px;
}

.reset-button {
    background-color: #ffffff;
    border-radius: 4px;
    font-size: small;
    padding: 5px;
    color: #F58EA1;
    border: 2px solid #F58EA1;
    cursor: pointer;

}

.reset-button:active {
    box-shadow: 0 5px #666;
    transform: translateY(2px);
}

.join-button:active {
    box-shadow: 0 5px #666;
    transform: translateY(2px);
}

/*footer style*/
footer {
    background-color: #F58EA1;
    align-items: flex-end;
    font-family: 'Montserrat', sans-serif;
}

/* navigation styling */

#menu {
    letter-spacing: 3px;
    font-size: 100%;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1rem;
}

.active {
    border-bottom: 1px solid;
    color: #3a3a3a;
}

/* navbar style with drop down menu */

nav {
    position: absolute;
    background-color: #94547E;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}

/*nav toggle*/

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;

}

.nav-toggle-label {
    font-size: 1rem;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #FFE0C4;
}

#introduction {
    font-size: 200%;
    margin: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center;
}

#why-are-crystals-used {
    line-height: 20px;
    margin: 20px;
}

hr {
    border-top: 1px solid #3a3a3a;
    margin: 5px 0;
}

p {
    padding 0 20px;
}

#how-are-crystals-used {
    line-height: 20px;
    margin: 20px;
}

#circle-cover-bg {
    background: url("../images/crystals-history.webp") no-repeat top center/cover;
    height: 50vw;
    width: 50vw;
    margin-bottom: 20px;
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#circle-image-bg {
    background: url("../images/woman-burning-sage.webp") no-repeat top center/cover;
    height: 50vw;
    width: 50vw;
    margin-bottom: 20px;
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#history-image,
#meditation-image {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Media Queries */

/* Media Queries, for landscape or larger mobiles */

@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;
    }

}

/*Media Queries, tablets and larger */

@media screen and (min-width: 768px) {
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;

    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 62px;
        margin: 0 0.5rem;
    }

    main {
        margin-top: 67px;
    }

    #cover-text {
        width: 400px;
        right: 50px;
    }

    #why-are-crystals-used,
    #how-are-crystals-used {
        display: flex;
        flex-direction: column;
        width: 95%;
    }

    #why-are-crystals-used>div,
    #how-are-crystals-used>div {
        width: 100%;
    }

    #why-are-crystals-used>div {
        text-align: end;
        align-self: flex-end;

    }

    #photos {
        column-count: 2;
        column-gap: 0;
    }
}

/* Media Queries, latops and larger */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a;
    }

    #photos {
        column-count: 3;
        column-gap: 0;
    }

    #signup-form {
        margin-left: 400px;
    }
}

@media screen and (min-width: 1200px) {
    #why-are-crystals-used {
        display: flex;
        flex-direction: row;
    }

    #signup-form {
        margin-left: 700px;
    }
}

/* 4k screens */
@media screen and (min-width: 2500px) {
    #why-are-crystals-used {
        display: flex;
        flex-direction: row;
    }

    #signup-form {
        margin-left: 1000px;
    }

    #cover-text {
        position: relative;
        margin-left: 2000px;
        margin-top: 600px;
        width: 600px;
        padding-left: 15px;
        font-size: 200%;
    }
}

